# adona-sim

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE-APACHE  LICENSE-MIT  LICENSE-NOTICE.md  README.md
crates/adona-game/: Cargo.toml
crates/adona-game/assets/: world_seed.json
crates/adona-game/src/: main.rs  seed.rs
crates/adona-sim/: Cargo.toml
crates/adona-sim-postgres/: Cargo.toml
crates/adona-sim-postgres/src/: lib.rs
crates/adona-sim-postgres/tests/: roundtrip.rs
crates/adona-sim/examples/: demo.rs
crates/adona-sim/src/: actors.rs  assets.rs  combat.rs  content.rs  contracts.rs  convoys.rs  error.rs  events.rs  faction_ai.rs  goods.rs  ids.rs  intel.rs  lib.rs  locations.rs  markets.rs  production.rs  rng.rs  stockpiles.rs  storage.rs  tiers.rs  time.rs  toe.rs  war.rs  world.rs
crates/adona-sim/tests/: invariants.rs
