[package]
name = "adona-sim"
description = "ADONA strategic economic and faction-war simulation. Headless, engine-agnostic. Everything important is real."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
